Initial commit for adding apartment
