# backend/src/controllers/apartment.controller.ts
@@ -1,6 +1,6 @@
 import { Body, Controller, Post, Route, Tags } from 'tsoa';
 import { Apartment } from '../models/Apartment';
-
+import * as ApartmentService from '../services/apartment.service';
 @Route('apartment')
 @Tags('Apartment')
 export class ApartmentController extends Controller {
@@ -9,9 +9,7 @@ export class ApartmentController extends Controller {
    * @param data Apartment: contains fields required for adding new apartment
    */
   @Post()
-  public addApartment(@Body() data: Apartment): void {
-    // TODO: Actual implementation
-    // eslint-disable-next-line no-console
-    console.log(data);
+  public addApartment(@Body() data: Apartment): Promise<Apartment> {
+    return ApartmentService.addApartment(data);
   }
 }
